@@ -146,6 +146,7 @@ END
 STRINGTABLE
 BEGIN
     IDSC_IMPORTNUMBER        " Import # %d"
+    IDSC_READNUMBER          " Open # %d"
 END
 
 STRINGTABLE
